--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="blogs">
 
             <div class="heading">
-                <h1>Blogs</h1>
+                <h1>Blogs Section 7</h1>
                 <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h4>
             </div>
 
